<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.shu.qubacms.qubacms.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="45dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:layout_constraintVertical_weight="100dp">

        <EditText
            android:id="@+id/Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_row="0"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/text_view_main_User_Name"
            tools:layout_editor_absoluteX="338dp"
            tools:layout_editor_absoluteY="160dp" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_row="2"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/text_view_main_Password"
            tools:layout_editor_absoluteY="154dp" />

        <TextView
            android:id="@+id/Trouble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view_main_trouble_logging_in"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="314dp" />

        <Button
            android:id="@+id/Contactus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="78dp"
            android:text="@string/button_name_main_Contact_us_Button"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="369dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="167dp"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="6"
            android:onClick="doStuff"
            android:text="@string/button_name_main_Login_Button"
            tools:layout_editor_absoluteY="151dp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
